# FLEXIMOD

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Git_push_test  README.md  pyproject.toml  requirements.txt
.github/workflows/: quality.yml
data/input/hybrid_ETES_DA/: additional_charges.csv  config.yaml  forecasts_df.csv
data/input/hybrid_ETES_DA_ID_aFRR_energy/: config.yaml  plants.csv
data/input/hybrid_ETES_DA_ID_aFRR_energy_capacity/: config.yaml  forecasts_df.csv  plants.csv
data/input/hybrid_ETES_DA_ID_buy/: config.yaml  forecasts_df.csv
data/input/hybrid_ETES_DA_ID_buy_sell/: config.yaml  forecasts_df.csv
data/input/hybrid_ETES_DE/: config.yaml  forecasts_df.csv
data/input/hybrid_ETES_ES/: additional_charges.csv  config.yaml  forecasts_df.csv
data/input/hybrid_ETES_FR/: additional_charges.csv  config.yaml  forecasts_df.csv
data/input/hybrid_ETES_ID_buy/: config.yaml
data/input/hybrid_ETES_ID_buy_sell/: config.yaml  plants.csv
data/input/hybrid_ETES_aFRR_capacity_ID_buy/: config.yaml
docs/: modeling_philosophy_and_architecture.md  strategies.md
notebooks/: fleximod_report_analysis.ipynb  result_analysis.ipynb
scripts/: plot_case.py  run_case.py
src/flexi_mod/: __init__.py  regulations.py
src/flexi_mod/data/: __init__.py  (+1 more)
tests/: conftest.py  test_afrr_energy.py  test_cli_logging.py  test_config.py  test_data_loader.py  test_hybrid_etes_gas_strategy.py  test_market_ledger.py  test_markets.py  test_regulations.py  test_steam_generation_plant.py  test_storage_cost_ledger.py  test_technologies.py  test_visualisation_analytics.py
(+75 files in other folders)
