# SPDX-FileCopyrightText: FLEXIMOD Developers
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FLEXIMOD"
version = "0.1.0"
description = "Flexible industrial energy system market model for hybrid ETES + gas boiler plants."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyomo>=6.7",
    "PyYAML>=6.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "highspy>=1.7",
]

[project.scripts]
fleximod-run-case = "flexi_mod.simulation.run_case:main"
fleximod-plot-case = "flexi_mod.simulation.plot_case:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pre-commit>=4.0",
    "ruff>=0.14.6",
    "codespell>=2.3",
    "reuse>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
